# advent-of-spin

./: .gitignore  README.md  rustfmt.toml
2023/: README.md
2023/challenge1/: README.md  spin.toml
2023/challenge1/assets/: index.html  stylesheet.css
2023/challenge1/data/: Cargo.toml
2023/challenge1/data/src/: lib.rs
2023/challenge2/: README.md  spin.toml
2023/challenge2/optimal/: Cargo.toml
2023/challenge3/: README.md  spin.toml
2023/challenge3/confabulator/: Cargo.toml
2023/challenge3/confabulator/src/: lib.rs
2023/challenge3/output-examples/: output-example-1.json
2023/challenge4/: README.md  spin.toml
2023/challenge4/bullseye/: Cargo.toml
2023/challenge4/bullseye/src/: lib.rs  test.rs
2024/: README.md
2024/challenge1/: Cargo.toml  README.md  spin.toml
2024/challenge1/src/: lib.rs
2024/challenge1/ui/: Cargo.toml
2024/challenge1/ui/assets/styling/: main.css
2024/challenge1/ui/src/: main.rs
2024/challenge1/ui/src/components/: mod.rs  wishlist_form.rs  wishlists.rs
2024/challenge1/ui/src/data/: wishlist.rs
2024/challenge2/: Cargo.toml  README.md  spin.toml  submit.sh
2024/challenge2/add/: componentize.sh  transpile.sh
2024/challenge2/calculator/: package.json
2024/challenge2/calculator/wit/: component.wit
2024/challenge2/src/: lib.rs
2024/challenge2/string-reverse/: package-lock.json  package.json  run-transpiled.js  string-reverse.js
2024/challenge2/ui/: .gitignore  Cargo.toml  Dioxus.toml
2024/challenge2/ui/src/: main.rs  route.rs
2024/challenge2/ui/src/components/: mod.rs  name_form.rs  navbar.rs  score.rs  wishlist_form.rs  wishlists.rs
2024/challenge2/ui/src/data/: calculated.rs  wishlist.rs
2024/challenge2/ui/src/views/: home.rs  naughty_or_nice.rs
2024/challenge3/: .gitignore  Cargo.toml  README.md  spin.toml  submit.sh
2024/challenge3/ai/: app.py  bindings.sh  componentize.sh  host.py  make-guest-bindings.sh  make-host-bindings.sh
2024/challenge3/ai/bindings_host/: __init__.py  intrinsics.py  root.core1.wasm  root.core10.wasm  root.core11.wasm  root.core12.wasm  root.core13.wasm  root.core14.wasm  root.core15.wasm  root.core16.wasm  root.core17.wasm  root.core18.wasm  root.core19.wasm  root.core2.wasm  root.core20.wasm  root.core21.wasm  root.core22.wasm  root.core23.wasm  root.core24.wasm  root.core25.wasm  root.core26.wasm  root.core27.wasm  root.core28.wasm  root.core29.wasm  root.core3.wasm  root.core30.wasm  root.core31.wasm  root.core33.wasm  root.core34.wasm  root.core35.wasm  root.core36.wasm  root.core37.wasm  root.core38.wasm  root.core39.wasm  root.core4.wasm  root.core40.wasm  root.core5.wasm  root.core6.wasm  root.core7.wasm  root.core8.wasm  (+1 more)
2024/challenge3/ai/wit/: world.wit
2024/challenge3/calculator/: calculator.js  package-lock.json
2024/challenge3/src/: lib.rs
2024/challenge3/src/bindings/: deps.rs
2024/challenge3/ui/: Dioxus.toml
2024/challenge3/ui/assets/: main.css  naughty-or-nice.css
2024/challenge3/ui/public/: index.html
(+31 files in other folders)
