[package]
name = "challenge2"
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Advent of Spin 2024 Challenge 2"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde_json = "1.0.133"
spin-sdk = "3.1.0"
wit-bindgen = "0.36.0"
urlencoding = "2.1.3"
