[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Advent of Spin 2023 Challenge 1"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["spin"]
license = "MIT"
name = "challenge1"
publish = false
readme = "README.md"
# repository = "https://github.com/david-wallace-croft/challenge1"
version = "0.0.0-SNAPSHOT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
