[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Tells a Christmas story based on prompts"
edition = "2021"
name = "confabulator"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
